<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#673AB7"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:padding="8sp"
        android:text="@string/Titulo"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/angry_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@drawable/circulo"
        android:backgroundTint="@color/cian" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/Name" />

    <ToggleButton
        android:id="@+id/boton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/def10dp"
        android:layout_marginHorizontal="@dimen/def10dp"
        android:layout_marginVertical="20dp"
        android:layout_weight="1"
        android:text="ToggleButton" />

    <LinearLayout
        android:id="@+id/parte_abajo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/def10dp"
        android:layout_marginHorizontal="@dimen/def10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Followers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Fol" />

        <TextView
            android:id="@+id/Following"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Foling" />

        <TextView
            android:id="@+id/Estrellita"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Estr" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/def10dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Anterior"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Antes" />

        <Button
            android:id="@+id/Sigiente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Siguente" />
    </LinearLayout>

</LinearLayout>