<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/def10dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/def50dp"
            android:layout_weight="2"
            android:background="@color/morado"
            android:gravity="center"
            android:lineSpacingExtra="0sp"
            android:padding="8sp"
            android:text="@string/Titulo"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </TableRow>

    <TableRow
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal">

        <View
            android:id="@+id/view2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/circulo" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="@dimen/def50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:text="@string/Name" />
    </TableRow>
    <TableRow>

        <Button
            android:id="@+id/button3"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/def50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/boton_swich_formato"
            android:text="@string/edit_profile"
            android:textColor="#000000" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/def10dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Fol" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Foling" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Estr" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="350dp" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/botonInicio"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/home" />
    </TableRow>

</TableLayout>